115 display played cards in the center of the board